--- a/weather appppp/app.css
+++ b/weather appppp/app.css
@@ -43,10 +43,37 @@ header {
   color: black;
   margin-top: 1%;
   margin-left: 30%;
-  height: 220px;
+  height: 240px;
   width: 400px;
   background-color: rgb(150, 150, 150);
   opacity: 0.8;
   display: grid;
   font-size: small;
+}
+.cards:hover {
+  -webkit-box-shadow: 15px 15px 15px #111;
+  box-shadow: 15px 15px 15px #111;
+}
+
+.cardH {
+  font-size: 1rem;
+  display: grid;
+  margin: 5px;
+  height: 250px;
+  width: 130px;
+  background-color: rgb(150, 150, 150);
+  opacity: 0.9;
+}
+.divHolder {
+  margin: 10px;
+  margin-left: 50px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.homeDivs {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  font-size: 3rem;
+  color: rgb(84, 27, 27);
 }
